--- a/Aspnet/Waitlist/Pages/Index.cshtml
+++ b/Aspnet/Waitlist/Pages/Index.cshtml
@@ -38,10 +38,10 @@
     <div class="dropdown mt-3" style="width: 12%;">
         <select id="termSelect" class="form-select form-select-sm" aria-label="Dropdown menu 4" required>
             <option selected disabled hidden>Term</option>
-            <option value="Spring">Spring</option>
-            <option value="Summer">Summer</option>
-            <option value="Fall">Fall</option>
-            <option value="Winter">Winter</option>
+            <option value="Spring">Spring 2024</option>
+            <option value="Summer">Summer 2024</option>
+            <option value="Fall">Fall 2024</option>
+            <option value="Winter">Winter 2024</option>
         </select>
         <input type="hidden" id="term" name="Term" />
     </div>
