--- a/SysProject/Aspnet/Waitlist/Pages/Index.cshtml
+++ b/SysProject/Aspnet/Waitlist/Pages/Index.cshtml
@@ -4,50 +4,98 @@
     ViewData["Title"] = "Home page";
 }
 
-
 <div class="text-center">
-    <h1 class="display-4">Waitlist</h1>
-
-    <!-- Three stacked vertical dropdown menus, lower width to look better -->
-    <div class="dropdown mt-3" style="width: 12%;">
-        <select class="form-select form-select-sm" aria-label="Dropdown menu 1">
-            <option selected>Class Type</option>
-            <option value="1">Art</option>
-            <option value="2">Bio</option>
-            <option value="3">ITC</option>
-        </select>
-    </div>
-    <div class="dropdown mt-3" style="width: 12%;">
-        <select class="form-select form-select-sm" aria-label="Dropdown menu 2">
-            <option selected>Course Number</option>
-            <option value="1">101</option>
-            <option value="2">201</option>
-            <option value="3">301</option>
-        </select>
-    </div>
-    <div class="dropdown mt-3" style="width: 12%;">
-        <select class="form-select form-select-sm" aria-label="Dropdown menu 3">
-            <option selected>Section Number</option>
-            <option value="1">A1</option>
-            <option value="2">B1</option>
-        </select>
-    </div>
-
-    <!-- Search button, mt- controls verticle spacing, margin right pushes the button to the left side of screen -->
-    <button type="button" class="btn btn-primary mt-4" style="margin-right: 1250px;">Search</button>
-
-
-    <!-- Text box for email, mt- controls verticle spacing, col- controls the length of the box -->
-    <div class="row mt-3">
-        <div class="col-5">
-            <input type="email" class="form-control" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-addon2">
-        </div>
-    </div>
-
-
-
-    <!-- Submit button mt- controls verticle spacing, margin right pushes the button to the left side of screen -->
-    <button type="button" class="btn btn-success mt-4" style="margin-right: 1250px;">Submit</button>
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<div class="row">
+    <table class="courses-table">
+        <thead>
+            <tr>
+                <th>CourseCode</th>
+                <th>Term</th>
+                <th>CourseTitle</th>
+                <th>Instructor</th>
+                <th>Seats</th>
+                <th>Schedule</th>
+                <th>Location</th>
+                <th>Credits</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var course in Model.CourseData)
+            {
+                <tr>
+                    <td>@course.CourseCode</td>
+                    <td>@course.Term</td>
+                    <td>@course.CourseTitle</td>
+                    <td>@course.Instructor</td>
+                    <td>@course.Seats</td>
+                    <td>@course.Schedule</td>
+                    <td>@course.Location</td>
+                    <td>@course.Credits</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<div class="row">
+    <form method="post">
+        <div class="containter">
+            <div class="row">
+                <div class="col-2">
+                    <div class="form-group">
+                        <label for="firstName">
+                            First Name
+                        </label>
+                        <input type="text"
+                               class="form-control"
+                               id="firstName"
+                               placeholder="First Name"
+                               asp-for="FirstName">
+                    </div>
+
+                </div>
+                <div class="col-2">
+                    <div class="form-group">
+                        <label for="lastName">
+                            Last Name
+                        </label>
+                        <input type="text"
+                               class="form-control"
+                               id="lastName"
+                               placeholder="Last Name"
+                               asp-for="LastName">
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="form-group"
+                <label for="email">
+                    Email
+                </label>
+                <input type="email"
+                    class="form-control"
+                    id="email"
+                    placeholder="Email"
+                    asp-for="Email">
+                </div>
+                </div>
+                <div class="row">
+                    &nbsp;
+                    <div class="col-2">
+                        &nbsp;
+                    </div>
+
+                    <div class="col-2">
+                        <input type="submit" />
+                    </div>
+                    <div class="col-4">
+                        &nbsp;
+                    </div>
+                </div>
+    </form>
+</div>
 
